change colors and fix bug and work on importer

--- a/views/media.pug
+++ b/views/media.pug
@@ -235,33 +235,33 @@ block content
         }
 
         /* change plyr color per : https://github.com/sampotts/plyr/issues/662 */
-        .plyr--full-ui input[type=range] {
-            color: #0FDA01;
-        }
+        /*.plyr--full-ui input[type=range] {*/
+            /*color: #0FDA01;*/
+        /*}*/
 
-        .plyr__control--overlaid {
-            background-color: #0FDA01;
-        }
+        /*.plyr__control--overlaid {*/
+            /*background-color: #0FDA01;*/
+        /*}*/
 
-        .plyr--video .plyr__control.plyr__tab-focus,
-        .plyr--video .plyr__control:hover,
-        .plyr--video .plyr__control[aria-expanded=true] {
-            background: #0FDA01;
-        }
+        /*.plyr--video .plyr__control.plyr__tab-focus,*/
+        /*.plyr--video .plyr__control:hover,*/
+        /*.plyr--video .plyr__control[aria-expanded=true] {*/
+            /*background: #0FDA01;*/
+        /*}*/
 
-        .plyr__control.plyr__tab-focus {
-            box-shadow: 0 0 0 5px rgba(#0FDA01, .5);
-        }
+        /*.plyr__control.plyr__tab-focus {*/
+            /*box-shadow: 0 0 0 5px rgba(#0FDA01, .5);*/
+        /*}*/
 
-        .plyr__menu__container .plyr__control[role=menuitemradio][aria-checked=true]::before {
-            background: #0FDA01;
-        }
+        /*.plyr__menu__container .plyr__control[role=menuitemradio][aria-checked=true]::before {*/
+            /*background: #0FDA01;*/
+        /*}*/
 
-        @media (min-width: 768px) {
-            .plyr__captions {
-                font-size: 23px;
-            }
-        }
+        /*@media (min-width: 768px) {*/
+            /*.plyr__captions {*/
+                /*font-size: 23px;*/
+            /*}*/
+        /*}*/
 
 
         /* anything above this width */
