--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -310,8 +310,8 @@ style.
       img(src="/images/white-burger.jpg" style="width:52px;display:inline-block;" onclick='toggleNav()')
 
     a(href="/" style="position:absolute;left:99px;top:15px;")
-      p.fullTitle(style="text-transform:uppercase;display:inline-block;color:#0FDA01;font-size:25px;font-weight:900;") #{brandName}
-      p.singleLetter(style="text-transform:uppercase;") #{brandName}
+      p.fullTitle(style="text-transform:uppercase;display:inline-block;color:#0093ff;font-size:25px;font-weight:900;") #{brandName}
+      p.singleLetter(style="text-transform:uppercase;color:#0093ff;") #{brandName}
 
     div.searchPlaceHolder(style="height:56px;display:inline-block;display:none;")
       a(href="#")
