--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -11,7 +11,7 @@ div.holder(style="border:")
                 img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
 
             else if upload.fileType == 'video' && !upload.thumbnailUrl
-                img.upload-thumbnail.preview-image(src="/no_img.png")
+                img.upload-thumbnail.preview-image(src="/images/no_img.png")
 
             else if upload.fileType == 'image'
                 // TODO: have to fix this
