--- a/views/account/importer.pug
+++ b/views/account/importer.pug
@@ -90,7 +90,7 @@ block content
                 url: `/importer`,
                 data,
                 success: function (data) {
-                  alert(data);
+                  // alert(data);
 
                   console.log(data);
                 },
