--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -190,6 +190,9 @@ block content
 
                 include ../viewPartials/uploadDetails
 
+    br
+    include ../viewPartials/channelOverviewPagination
+
     include ../viewPartials/adminSensitivityButtons
 
     include ../viewPartials/changeSensitivityFilterJs
