--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -241,7 +241,7 @@ style.
 
     /* Dark mode: */
     .dark-mode {
-        background-color: #111 !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
+        background-color: #141414 !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
         color: darkgray !important;
     }
 
@@ -358,10 +358,13 @@ style.
     }
 
     .display-element {
+        border-bottom: 1px solid #313131;
+
         /*TODO: this should be the height of the */
         /*max-height: 625px;*/
 
-        border: 1px solid #5b5a5a;
+        /* turning off the border */
+        /*border: 1px solid #5b5a5a;*/
 
     }
 
