--- a/views/media.pug
+++ b/views/media.pug
@@ -214,7 +214,7 @@ block content
 
 
         .secondLine {
-            border-bottom: 1px solid #5b5a5a !important;
+            border-bottom: 1px solid #3f3f3f  !important;
         }
 
         .lampIcon {
