added 480p video quality

--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -69,7 +69,7 @@ script.
     autoplay,
     clickToPlay: true,
     speed: {selected: 1, options: [0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
-    quality: { default: 144, options: [1080, 720 ,360, 240, 144] },
+    quality: { default: 144, options: [1080, 720, 360, 480, 240, 144] },
     controls: ['play-large', 'play','progress', 'current-time', 'duration', 'rewind', 'fast-forward', 'mute', 'volume', 'settings', 'fullscreen', 'captions'],
     settings: ['speed', 'captions', 'quality', 'loop']
   };
