--- a/views/media.pug
+++ b/views/media.pug
@@ -488,7 +488,7 @@ block content
                                 i.repeat-icon.fa.fa-repeat(aria-hidden="true" style="cursor:pointer")
 
                 // Upload View Amount
-                h3.fw(style="color:a5a5a5") #{upload.views} Views
+                h3.fw(style="color:a5a5a5") #{numberWithCommas(upload.views)} Views
 
                 // Upload time ago, duration and uploader
                 if upload.uploader
